--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
       <article>
-        <h2 class="sr-only">로그인 상태 버튼</h2>
+        <h2 class="sr-only">로그인 창</h2>
         <ul>
           <li><button type="button">구매회원 로그인</button></li>
           <li><button type="button">판매회원 로그인</button></li>
@@ -23,7 +23,7 @@
         <!-- 위 버튼 클릭시 각각의 (.buyer/.seller)class를 부여하여  
          .buyer => 구매회원으로 로그인 / .seller => 판매회원 로그인으로 되도록 설정가능한지 확인-->
         <section>
-          <h2 class="sr-only">로그인 입력창</h2>
+          <h2 class="sr-only">로그인 아이디 및 비밀번호 입력</h2>
           <form action="" method="post">
             <label for="id">아이디</label>
             <input type="text" id="id" />
