main 내 ul에 class 추가

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <article>
         <h2 class="sr-only">로그인 창</h2>
-        <ul>
+        <ul class="login-btns">
           <li><button type="button">구매회원 로그인</button></li>
           <li><button type="button">판매회원 로그인</button></li>
         </ul>
@@ -34,7 +34,7 @@
           </form>
         </section>
         <!-- a태그 링크 페이지 제작 후 연결되도록 변경-->
-        <ul>
+        <ul class="find">
           <li><a href="#">회원가입</a></li>
           <!-- 가상요소 | 로 넣어서 구분 -->
           <li><a href="#">비밀번호 찾기</a></li>
