--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          .buyer => 구매회원으로 로그인 / .seller => 판매회원 로그인으로 되도록 설정가능한지 확인-->
         <section>
           <h2 class="sr-only">로그인 아이디 및 비밀번호 입력</h2>
-          <form action="" method="post">
+          <form action="#" method="post">
             <label for="id">아이디</label>
             <input type="text" id="id" />
             <label for="password">비밀번호</label>
