--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
           <h2 class="sr-only">로그인 아이디 및 비밀번호 입력</h2>
           <form action="#" method="post" class="login-form">
             <label for="id" class="sr-only">아이디</label>
-            <input type="text" id="id" placeholder="아이디" />
+            <input type="text" name="id" id="id" placeholder="아이디" />
             <label for="password" class="sr-only">비밀번호</label>
-            <input type="password" id="password" placeholder="비밀번호" />
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="비밀번호"
+            />
+            <p class="login-error"></p>
             <button type="submit">로그인</button>
             <!-- 버튼 클릭 오류 메세지 JS로 적용확인 -->
           </form>
