--- a/index.html
+++ b/index.html
@@ -26,13 +26,20 @@
           <h2 class="sr-only">로그인 아이디 및 비밀번호 입력</h2>
           <form action="#" method="post" class="login-form">
             <label for="id" class="sr-only">아이디</label>
-            <input type="text" name="id" id="id" placeholder="아이디" />
+            <input
+              type="text"
+              name="id"
+              id="id"
+              placeholder="아이디"
+              autocomplete="username"
+            />
             <label for="password" class="sr-only">비밀번호</label>
             <input
               type="password"
               name="password"
               id="password"
               placeholder="비밀번호"
+              autocomplete="current-password"
             />
             <p></p>
             <button type="submit">로그인</button>
