button 태그 css 수정 및 주석 수정

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <article>
         <h2 class="sr-only">로그인 창</h2>
         <ul class="login-btns">
-          <li><button type="button">구매회원 로그인</button></li>
-          <li><button type="button">판매회원 로그인</button></li>
+          <li><button type="button" class="buyer">구매회원 로그인</button></li>
+          <li><button type="button" class="seller">판매회원 로그인</button></li>
         </ul>
         <!-- 위 버튼 클릭시 각각의 (.buyer/.seller)class를 부여하여  
          .buyer => 구매회원으로 로그인 / .seller => 판매회원 로그인으로 되도록 설정가능한지 확인-->
