회원가입 페이지 연결

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
         <!-- a태그 링크 페이지 제작 후 연결되도록 변경-->
         <ul class="find">
-          <li><a href="#">회원가입</a></li>
+          <li><a href="./signup.html">회원가입</a></li>
           <li><a href="#">비밀번호 찾기</a></li>
         </ul>
       </article>
