--- a/signup.html
+++ b/signup.html
@@ -29,8 +29,10 @@
           <h2 class="sr-only">회원가입 정보 입력</h2>
           <form action="#" method="post" class="join-form">
             <label for="id">아이디</label>
-            <input type="text" name="id" id="id" autocomplete="username" />
-            <button type="submit">중복확인</button>
+            <div class="id-wrap">
+              <input type="text" name="id" id="id" autocomplete="username" />
+              <button type="submit" class="duplicate-check">중복확인</button>
+            </div>
             <!-- 아이디 중복 확인 -->
             <p class="id-check"></p>
             <!-- 비밀번호 및 재확인 유효한 값인 경우 체크 이미지 확인되게끔 JS 적용-->
@@ -53,44 +55,54 @@
             <label for="name">이름</label>
             <input type="text" name="name" id="name" autocomplete="name" />
             <label for="phone">휴대폰번호</label>
-            <ul class="phone">
+            <div class="phone-wrap">
               <select name="phone1" id="phone">
                 <option value="010">010</option>
                 <option value="011">011</option>
                 <option value="016">016</option>
                 <option value="017">017</option>
               </select>
-              <li><input type="text" name="phone2" id="phone" /></li>
-              <li><input type="text" name="phone3" id="phone" /></li>
-            </ul>
+              <input type="text" name="phone2" id="phone" />
+              <input type="text" name="phone3" id="phone" />
+            </div>
 
             <!-- 판매회원가입 전용 input 요소 -->
             <!-- 정규표현식 적용 -->
-            <label for="business-num">사업자 등록번호</label>
-            <input
-              type="text"
-              name="business-num"
-              id="business-num"
-              class="seller-only"
-            />
-            <button type="submit">중복확인</button>
+            <label for="business-num" class="seller-only"
+              >사업자 등록번호</label
+            >
+            <div class="businessnum-wrap">
+              <input
+                type="text"
+                name="business-num"
+                id="business-num"
+                class="seller-only"
+              />
+              <button type="submit" class="duplicate-check seller-only">
+                인증
+              </button>
+            </div>
 
-            <label for="store-name">스토어 이름</label>
+            <label for="store-name" class="seller-only">스토어 이름</label>
             <input
               type="text"
               name="store-name"
               id="store-name"
               class="seller-only"
             />
-
-            <!-- checkbox 디자인 가상요소로 적용 -->
-            <input type="checkbox" />
-            <label for="checkbox"
-              >호두샵의 <span>이용약관</span> 및 <span>개인정보처리방침</span>에
-              대한 내용을 확인하였고 동의합니다.</label
-            >
-            <!-- 모든 값이 유효하기 전까지 disabled js로 적용 -->
-            <button type="submit">가입하기</button>
+            <div class="no-wrap">
+              <!-- checkbox 디자인 가상요소로 적용 -->
+              <input type="checkbox" />
+              <label for="checkbox" id="checkbox"
+                >호두샵의 <span>이용약관</span> 및
+                <span>개인정보처리방침</span>에 대한 내용을 확인하였고
+                동의합니다.</label
+              >
+              <!-- 모든 값이 유효하기 전까지 disabled js로 적용 -->
+              <button type="submit" class="signup-btn" disabled>
+                가입하기
+              </button>
+            </div>
           </form>
         </section>
       </article>
