--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,9 @@
   <body>
     <header>
       <h1>
-        <a href="#"><img src="./assets/Logo-hodu.png" alt="HODU" /></a>
+        <a href="./index.html"
+          ><img src="./assets/Logo-hodu.png" alt="HODU"
+        /></a>
       </h1>
     </header>
     <main>
