phone input태그 마크업 수정

--- a/signup.html
+++ b/signup.html
@@ -58,14 +58,14 @@
             <input type="text" name="name" id="name" autocomplete="name" />
             <label for="phone">휴대폰번호</label>
             <div class="phone-wrap">
-              <select name="phone1" id="phone">
+              <select name="phone1" id="phone1">
                 <option value="010">010</option>
                 <option value="011">011</option>
                 <option value="016">016</option>
                 <option value="017">017</option>
               </select>
-              <input type="text" name="phone2" id="phone" />
-              <input type="text" name="phone3" id="phone" />
+              <input type="text" name="phone2" id="phone2" />
+              <input type="text" name="phone3" id="phone3" />
             </div>
 
             <!-- 판매회원가입 전용 input 요소 -->
