--- a/signup.html
+++ b/signup.html
@@ -93,9 +93,8 @@
               class="seller-only"
             />
             <div class="no-wrap">
-              <!-- checkbox 디자인 가상요소로 적용 -->
-              <input type="checkbox" />
-              <label for="checkbox" id="checkbox"
+              <input type="checkbox" id="checkbox" class="txt-hide" />
+              <label for="checkbox" class="checkbox"
                 >호두샵의 <span>이용약관</span> 및
                 <span>개인정보처리방침</span>에 대한 내용을 확인하였고
                 동의합니다.</label
