회원가입 비밀번호 유효 js 적용

--- a/signup.html
+++ b/signup.html
@@ -46,12 +46,14 @@
               name="password"
               id="password"
               autocomplete="new-password"
+              class="invalid-password"
             />
             <label for="password-recheck">비밀번호 재확인</label>
             <input
               type="password"
               name="password-recheck"
               id="password-recheck"
+              class="invalid-password"
             />
             <!-- 비밀번호와 재확인 일치 여부 확인 -->
             <p class="password-check"></p>
