--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,13 @@
           <form action="#" method="post" class="join-form">
             <label for="id">아이디</label>
             <div class="id-wrap">
-              <input type="text" name="id" id="id" autocomplete="username" />
+              <input
+                type="text"
+                name="id"
+                id="id"
+                autocomplete="username"
+                required
+              />
               <button type="submit" class="duplicate-check">중복확인</button>
             </div>
             <!-- 아이디 중복 확인 -->
@@ -47,6 +53,7 @@
               id="password"
               autocomplete="new-password"
               class="invalid-password"
+              required
             />
             <label for="password-recheck">비밀번호 재확인</label>
             <input
@@ -54,22 +61,29 @@
               name="password-recheck"
               id="password-recheck"
               class="invalid-password"
+              required
             />
             <!-- 비밀번호와 재확인 일치 여부 확인 -->
             <p class="password-check"></p>
 
             <label for="name">이름</label>
-            <input type="text" name="name" id="name" autocomplete="name" />
+            <input
+              type="text"
+              name="name"
+              id="name"
+              autocomplete="name"
+              required
+            />
             <label for="phone">휴대폰번호</label>
             <div class="phone-wrap">
-              <select name="phone1" id="phone1">
+              <select name="phone1" id="phone1" required>
                 <option value="010">010</option>
                 <option value="011">011</option>
                 <option value="016">016</option>
                 <option value="017">017</option>
               </select>
-              <input type="text" name="phone2" id="phone2" />
-              <input type="text" name="phone3" id="phone3" />
+              <input type="text" name="phone2" id="phone2" required />
+              <input type="text" name="phone3" id="phone3" required />
             </div>
 
             <!-- 판매회원가입 전용 input 요소 -->
