--- a/signup.html
+++ b/signup.html
@@ -44,8 +44,6 @@
             <!-- 아이디 중복 확인 -->
             <p class="id-check"></p>
 
-            <!-- 비밀번호 및 재확인 유효한 값인 경우 체크 이미지 확인되게끔 JS 적용-->
-            <!-- 비밀번호 추후 필요시 정규표현식 적용 -->
             <label for="password">비밀번호</label>
             <input
               type="password"
@@ -54,6 +52,8 @@
               autocomplete="new-password"
               class="invalid-password"
               required
+              pattern="(?=.*\d)(?=.*[a-z]).{8,}"
+              minlength="8"
             />
             <label for="password-recheck">비밀번호 재확인</label>
             <input
