사업자등록번호 pattern 적용

--- a/signup.html
+++ b/signup.html
@@ -111,6 +111,8 @@
                 name="business-num"
                 id="business-num"
                 class="seller-only"
+                maxlength="10"
+                pattern="\d{10}"
               />
               <button type="submit" class="duplicate-check seller-only">
                 인증
