아이디 유효성 검증 js 수정

--- a/signup.html
+++ b/signup.html
@@ -38,6 +38,7 @@
                 id="id"
                 autocomplete="username"
                 required
+                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{0,20}"
               />
               <button type="submit" class="duplicate-check">중복확인</button>
             </div>
