--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
                 id="id"
                 autocomplete="username"
                 required
-                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{0,20}"
+                pattern="[a-zA-Z0-9]{1,20}"
               />
               <button type="submit" class="duplicate-check">중복확인</button>
             </div>
