휴대폰번호 input 태그 내 id 삭제

--- a/signup.html
+++ b/signup.html
@@ -88,7 +88,7 @@
 
             <label for="phone">휴대폰번호</label>
             <div class="phone-wrap">
-              <select name="phone1" id="phone1" required>
+              <select name="phone1" id="phone" required>
                 <option value="010">010</option>
                 <option value="011">011</option>
                 <option value="016">016</option>
@@ -97,7 +97,6 @@
               <input
                 type="text"
                 name="phone2"
-                id="phone2"
                 pattern="\d{4}"
                 maxlength="4"
                 required
@@ -105,7 +104,6 @@
               <input
                 type="text"
                 name="phone3"
-                id="phone3"
                 pattern="\d{4}"
                 maxlength="4"
                 required
