--- a/signup.html
+++ b/signup.html
@@ -111,14 +111,12 @@
             </div>
             <p class="phoneError id-error"></p>
             <!-- 판매회원가입 전용 input 요소 -->
-            <label for="business-num" class="seller-only"
-              >사업자 등록번호</label
-            >
+            <label for="businessNum" class="seller-only">사업자 등록번호</label>
             <div class="businessnum-wrap">
               <input
                 type="text"
-                name="business-num"
-                id="business-num"
+                name="businessNum"
+                id="businessNum"
                 class="seller-only"
                 maxlength="10"
                 pattern="\d{10}"
@@ -133,8 +131,8 @@
             <label for="store-name" class="seller-only">스토어 이름</label>
             <input
               type="text"
-              name="store-name"
-              id="store-name"
+              name="storeName"
+              id="storeName"
               class="seller-only"
             />
             <p class="id-error seller-only hidden">필수 요소 입니다.</p>
