--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
           </li>
         </ul>
 
-        <!-- form 태그 제출시 이동 JS로 구현 예정 -->
         <section>
           <h2 class="sr-only">로그인 아이디 및 비밀번호 입력</h2>
           <form action="#" method="post" class="login-form">
@@ -47,10 +46,11 @@
             />
             <!-- p태그 로그인 오류 메세지 띄우는 역할 -->
             <p></p>
+            <!-- form 제출 => 로그인 : 구매회원 페이지로 이동 (페이지 제작 후 연결 예정) -->
             <button type="submit">로그인</button>
           </form>
         </section>
-        <!-- a태그 링크 페이지 제작 후 연결되도록 변경-->
+        <!-- 회원가입 : 회원가입 페이지 연결 / 비밀번호 찾기 : 미구현-->
         <ul class="find">
           <li><a href="./signup.html">회원가입</a></li>
           <li><a href="#">비밀번호 찾기</a></li>
