--- a/signup.html
+++ b/signup.html
@@ -42,8 +42,9 @@
               />
               <button type="submit" class="duplicate-check">중복확인</button>
             </div>
+            <!-- 추후 수정 필요 -->
             <p class="invalidColor hidden">필수 정보입니다.</p>
-            <!-- 아이디 중복 확인 -->
+            <!-- p태그 아이디 중복 확인 메세지 알림 -->
             <p class="validColor"></p>
 
             <label for="password">비밀번호</label>
@@ -69,7 +70,7 @@
             />
             <p class="invalidColor hidden">필수 정보입니다.</p>
 
-            <!-- 비밀번호와 재확인 일치 여부 확인 -->
+            <!-- p태그 비밀번호와 비밀번호 재확인 일치 여부 확인 메세지 알림 -->
             <p class="password-check"></p>
 
             <label for="name">이름</label>
@@ -141,7 +142,8 @@
                 <span>개인정보처리방침</span>에 대한 내용을 확인하였고
                 동의합니다.</label
               >
-              <!-- 모든 값이 유효하기 전까지 disabled js로 적용 -->
+              <!-- 모든 값이 유효하기 전까지 disabled => js로 모든 값 유효 + checkbox:checked => disabled 해제 기능 추가-->
+              <!-- form 제출 => 회원가입(가입하기 활성화) => 가입 완료 후 로그인 페이지로 이동 -->
               <button type="submit" class="signup-btn" disabled>
                 가입하기
               </button>
