페이지명 수정

--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>
-        <a href="./index.html"
+        <a href="./login.html"
           ><img src="./assets/Logo-hodu.png" alt="HODU"
         /></a>
       </h1>
