--- a/index.html
+++ b/index.html
@@ -8,6 +8,125 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <!-- 상품 목록 페이지 -->
+    <header>
+      <nav>
+        <h1>
+          <a href="#"><img src="./assets/Logo-hodu.png" alt="HODU" /></a>
+        </h1>
+        <label for="search"></label>
+        <input type="text" />
+        <div>
+          <ul>
+            <li>
+              <a href="#"
+                ><img src="./assets/icon-shopping-cart.svg" alt="" />장바구니</a
+              >
+            </li>
+            <li>
+              <a href="./login.html"
+                ><img src="./assets/icon-user.svg" alt="" />로그인</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2 class="sr-only">호두 상품 관련 배너</h2>
+        <img src="http://placeholder.co/1920x500" alt="" />
+      </section>
+      <section>
+        <h2 class="sr-only">호두 상품 목록</h2>
+        <article>
+          <img
+            src="http://placeholder.co/380x380"
+            alt="프로그래밍 언어 로고가 다양하게 그려진 파우치"
+          />
+          <p>우당탕탕 라이캣의 실험실</p>
+          <h3>Hack Your Life 개발자 노트북 파우치</h3>
+          <p class="price"><span>29,000</span>원</p>
+        </article>
+        <article>
+          <img
+            src="http://placeholder.co/380x380"
+            alt="고양이와 태그가그려진 머그컵과 노트북 키링"
+          />
+          <p>제주코딩베이스캠프</p>
+          <h3>네 개발잡니다 개발자키링 금속키링</h3>
+          <p class="price"><span>29,000</span>원</p>
+        </article>
+        <article>
+          <img
+            src="http://placeholder.co/380x380"
+            alt="캐릭터들이 그려진 담요를 어깨에 두르고 있는 토끼 캐릭터"
+          />
+          <p>백엔드글로벌</p>
+          <h3>딥러닝 개발자 무릎 담요</h3>
+          <p class="price"><span>29,000</span>원</p>
+        </article>
+        <article>
+          <img
+            src="http://placeholder.co/380x380"
+            alt="캐릭터와 단어가 있는 스티커 팩"
+          />
+          <p>코딩앤유</p>
+          <h3>우당탕탕 라이캣의 실험실 스티커 팩</h3>
+          <p class="price"><span>29,000</span>원</p>
+        </article>
+        <article>
+          <img
+            src="http://placeholder.co/380x380"
+            alt="404벌레캐릭터와 살충제를 들고있는 개구리 캐릭터"
+          />
+          <p>파이썬스쿨</p>
+          <h3>버그를 Java라 버그잡는 개리씨 키링 개발자키링...</h3>
+          <p class="price"><span>29,000</span>원</p>
+        </article>
+      </section>
+    </main>
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">호두샵 소개</a></li>
+          <li><a href="#">이용약관</a></li>
+          <li><a href="#">개인정보처리방침</a></li>
+          <li><a href="#">전자금융거래약관</a></li>
+          <li><a href="#">청소년보호정책</a></li>
+          <li><a href="#">제휴문의</a></li>
+        </ul>
+
+        <div class="sns-wrap">
+          <ul>
+            <li>
+              <a href="#"
+                ><img
+                  src="./assets/icon-insta.svg"
+                  alt="인스타그램 페이지 바로가기"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./assets/icon-fb.svg" alt="페이스북 페이지 바로가기"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./assets/icon-yt.svg" alt="유튜브 페이지 바로가기"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <hr />
+      <address>
+        (주)HODU SHOP <br />
+        제주특별자치도 제주시 동광고 137 제주코딩베이스캠프 <br />
+        사업자 번호 : 000-0000-0000 | 통신판매업 <br />
+        대표 : 김호두
+      </address>
+    </footer>
     <script src="./js/main.js"></script>
   </body>
 </html>
