--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
         <h1>
           <a href="#"><img src="./assets/Logo-hodu.png" alt="HODU" /></a>
         </h1>
-        <label for="search"></label>
-        <input type="text" />
+        <form action="#" method="get">
+          <label for="search"></label>
+          <input type="text" id="search" name="search" />
+          <button class="searchBtn">
+            <img src="./assets/search.svg" alt="검색" />
+          </button>
+        </form>
         <div>
           <ul>
             <li>
