🎨 배너 마크업 수정 및 main css 적용

--- a/index.html
+++ b/index.html
@@ -46,11 +46,17 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="banner">
         <h2 class="sr-only">호두 상품 관련 배너</h2>
+        <button class="leftBtn">
+          <img src="./assets/icon-swiper-1.svg" alt="left swiper button" />
+        </button>
         <img src="http://placeholder.co/1920x500" alt="" />
+        <button class="rightBtn">
+          <img src="./assets/icon-swiper-2.svg" alt="right swiper button" />
+        </button>
       </section>
-      <section>
+      <section class="goodsList">
         <h2 class="sr-only">호두 상품 목록</h2>
         <article>
           <img
