🎨 footer 마크업 수정 및 css 적용

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </main>
     <footer>
       <nav>
-        <ul>
+        <ul class="about-wrap">
           <li><a href="#">호두샵 소개</a></li>
           <li><a href="#">이용약관</a></li>
           <li><a href="#">개인정보처리방침</a></li>
@@ -140,7 +140,7 @@
       </nav>
       <hr />
       <address>
-        (주)HODU SHOP <br />
+        <span>(주)HODU SHOP</span> <br />
         제주특별자치도 제주시 동광고 137 제주코딩베이스캠프 <br />
         사업자 번호 : 000-0000-0000 | 통신판매업 <br />
         대표 : 김호두
